# ReallyUsefulRobot

./: README.md  wheelReduction.txt
CAD/: MotorPulley.stl  RUR_001.stp  WheelPulley.stl
ROS/nct_navigation/: CMakeLists.txt  package.xml
ROS/nct_navigation/launch/: amcl.launch  main.launch  move_base.launch  nct_bringup.launch
ROS/nct_navigation/maps/: teknokent.yaml
ROS/nct_navigation/params/: base_global_planner_param.yaml  base_local_planner_params_teb.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ROS/rur/: CMakeLists.txt  package.xml
ROS/rur/launch/: rur_bringup.launch
ROS/rur_description/: CMakeLists.txt  package.xml
ROS/rur_description/urdf/: rur.urdf
ROS/rur_detailed_description/: CMakeLists.txt  LICENSE  package.xml
ROS/rur_detailed_description/gazebo/: rur_detailed_materials.gazebo  rur_detailed_physics.gazebo  rur_detailed_plugins.gazebo
ROS/rur_detailed_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
ROS/rur_detailed_description/meshes/: back_caster.stl  base_link.stl  camera_link.stl  electronics_lid.stl  front_caster.stl  head.stl  left_antenna.stl  left_ear.stl  left_tyre.stl  left_wheel.stl  lid.stl  lidar.stl  long_bar.stl  monitor.stl  monitor_cover.stl  realsense.stl  right_antenna.stl  right_ear.stl  right_tyre.stl  right_wheel.stl  visor.stl
ROS/rur_detailed_description/rviz/: urdf.rviz
ROS/rur_detailed_description/urdf/: materials.xacro  rur_detailed.trans  rur_detailed.xacro
ROS/rur_gazebo/: CMakeLists.txt  package.xml
ROS/rur_gazebo/launch/: rur_house.launch
ROS/rur_gazebo/models/house_001/: model.config  model.sdf
ROS/rur_gazebo/worlds/: turtlebot3_house.world
ROS/rur_navigation/: CMakeLists.txt  package.xml
ROS/rur_navigation/launch/: amcl.launch  move_base.launch  rur_navigation.launch
ROS/rur_navigation/maps/: house_map.yaml  teknokent.yaml
ROS/rur_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ROS/rur_navigation/rviz/: rur_navigation.rviz
Vision/: camera11_depth.py
arduino/RUR099/: ODriveInit.ino  RUR099.ino
